--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <title>Css</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div class="container" id="template-areas">
+            <div id="header">
+                <h1 style="text-align: center; color: white;font-size: 50px;"> Matheus Julio oliveira da silva</h1>
+            </div>
+            <div id="menu">
+                <p style="color: white;font-size: 20px;"> Sobre mim</p>
+                <ul class="lista">
+                    <li class="linha"><a  target="_blank">Telefone de contato: (34)99658-4167</a></li>
+                    <li class="linha"><a  target="_blank">E-mail: Theussilva0988@gmail.com</a></li>
+                    <i class="fa-brands fa-instagram">@theus_silva6517</i>
+                </ul>
+            </div>
+            <div id="context">
+                <p> Conteudo</p>
+                <p>Nome: Matheus</p>
+                <p>Idade: 19</p>
+                <p>Cidade: Campina Verde-MG</p>
+            </div>
+            <div id="footer">
+                <p> Rodape</p>
+            </div>
+        </div>
+    </body>
+</html>
