--- a/index.html
+++ b/index.html
@@ -3,28 +3,46 @@
     <head>
         <title>Css</title>
         <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/c708515fe0.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="container" id="template-areas">
             <div id="header">
-                <h1 style="text-align: center; color: white;font-size: 50px;"> Matheus Julio oliveira da silva</h1>
+                <h1> Matheus Julio Oliveira Da Silva</h1>
             </div>
             <div id="menu">
-                <p style="color: white;font-size: 20px;"> Sobre mim</p>
                 <ul class="lista">
-                    <li class="linha"><a  target="_blank">Telefone de contato: (34)99658-4167</a></li>
-                    <li class="linha"><a  target="_blank">E-mail: Theussilva0988@gmail.com</a></li>
-                    <i class="fa-brands fa-instagram">@theus_silva6517</i>
+                    <li class="linha">Telefone de contato: (34)99658-4167</a></li>
+                    <li class="linha">E-mail: Theussilva0988@gmail.com</a></li>
+                    <li class="linha"><i class="fa-brands fa-instagram">@theus_silva6517</i></li>
                 </ul>
             </div>
             <div id="context">
-                <p> Conteudo</p>
-                <p>Nome: Matheus</p>
-                <p>Idade: 19</p>
-                <p>Cidade: Campina Verde-MG</p>
+                <p>Tenho 19 anos , conclui o ensino medio, estou cursando o 3o periodo do ensino
+                    superior na area de TI (tecnico em informatica). Sou uma pessoa esforcada e aberto a
+                    novos aprendizados. Meu objetivo e contribuir para o crescimento da empresa, em
+                    qualquer area que eu estiver.
+                    
+                    Formacao
+                    2023_ Curso Tecnico em Informatica (3operiodo)_ Instituto Federal Do Triangulo
+                    Mineiro com conclusao prevista para dezembro de 2023.
+                    2019_2021 Ensino Medio concluido na Escola Nossa Senhora Das Gracas _ Campina
+                    Verde-M.G.
+                    
+                    Habilidades
+                     Iniciativa.
+                     Raciocinio logico.
+                     Colaboracao.
+                     Iniciacao na linguagem C.
+                     Iniciao na informatica basica: Word, Excel.
+                    Interesses
+                     Esportes(futebol, corrida, volei).
+                     Jogos de raciocinio.
+                     Marketing virtual.</p>
             </div>
             <div id="footer">
                 <p> Rodape</p>
+                <p><a href="https://instagram.com/theus_silva6517?igshid=ZGUzMzM3NWJiOQ==" target="_blank">link instagram</a></p>
             </div>
         </div>
     </body>
