--- a/index.html
+++ b/index.html
@@ -18,27 +18,33 @@
                 </ul>
             </div>
             <div id="context">
-                <p>Tenho 19 anos , conclui o ensino medio, estou cursando o 3o periodo do ensino
+                <p> Meu nome e Matheus, tenho 19 anos , conclui o ensino medio, estou cursando o terceiro periodo o periodo do ensino
                     superior na area de TI (tecnico em informatica). Sou uma pessoa esforcada e aberto a
                     novos aprendizados. Meu objetivo e contribuir para o crescimento da empresa, em
-                    qualquer area que eu estiver.
-                    
-                    Formacao
-                    2023_ Curso Tecnico em Informatica (3operiodo)_ Instituto Federal Do Triangulo
+                    qualquer area que eu estiver.</p>
+                    <br><br>
+                   Formacao2023_Curso Tecnico em Informatica (3operiodo)_ Instituto Federal Do Triangulo
                     Mineiro com conclusao prevista para dezembro de 2023.
                     2019_2021 Ensino Medio concluido na Escola Nossa Senhora Das Gracas _ Campina
                     Verde-M.G.
-                    
-                    Habilidades
-                     Iniciativa.
-                     Raciocinio logico.
-                     Colaboracao.
-                     Iniciacao na linguagem C.
-                     Iniciao na informatica basica: Word, Excel.
-                    Interesses
-                     Esportes(futebol, corrida, volei).
-                     Jogos de raciocinio.
-                     Marketing virtual.</p>
+                    <br><br> 
+                    <h1 style="text-align: left;font-size: 20px;color: white;">Habilidades</h1>
+                        <p>Iniciativa.</p>
+                        <p>Raciocinio logico.</p>
+                        <p>Colaboracao.</p>
+                        <p>Iniciacao na linguagem C.</p>
+                        <p>Iniciao na informatica basica: Word, Excel.</p>
+                        <p>Iniciacao em programacao em HTML</p>
+                        <p>Iniciacao em manutencao de computadores e notebooks</p>
+                        <p>Iniciacao com GIT e GITHUB</p>
+                        <h1 style="text-align: left;font-size: 20px; color: white;">Certificados</h1>
+                        <p><img src="certificado1.jpg" alt="imagem.png"><img src="certificado2.jpg" alt="imagem.png"></p>
+                        <p>Certificado de carga horaria 40 horas de gestao e empreendimento: diagnostico e analise de micro e pequenos negocios </p>
+                        <p>Certificado de carga horaria 10 horas de pilotagem de Drone</p>
+                        <h1 style="text-align: left;font-size: 20px;color: white;">Interesses</h1>
+                     <p>Esportes(futebol, corrida, volei).</p>
+                     <p>Jogos de raciocinio.</p>
+                     <p>Marketing virtual.</p>
             </div>
             <div id="footer">
                 <p> Rodape</p>
