--- a/index.html
+++ b/index.html
@@ -8,46 +8,45 @@
     <body>
         <div class="container" id="template-areas">
             <div id="header">
-                <h1> Matheus Julio Oliveira Da Silva</h1>
+                <h1><i class="fa-regular fa-user"></i>&nbsp; Matheus Julio Oliveira Da Silva</h1>
             </div>
             <div id="menu">
                 <ul class="lista">
-                    <li class="linha">Telefone de contato: (34)99658-4167</a></li>
-                    <li class="linha">E-mail: Theussilva0988@gmail.com</a></li>
+                    <li class="linha"><i class="fa-solid fa-phone">Telefone de contato: (34)99658-4167</i></a></li>
+                    <li class="linha"><i class="fa-solid fa-user">E-mail: Theussilva0988@gmail.com</i></a></li>
                     <li class="linha"><i class="fa-brands fa-instagram">@theus_silva6517</i></li>
                 </ul>
             </div>
             <div id="context">
-                <p> Meu nome e Matheus, tenho 19 anos , conclui o ensino medio, estou cursando o terceiro periodo o periodo do ensino
-                    superior na area de TI (tecnico em informatica). Sou uma pessoa esforcada e aberto a
-                    novos aprendizados. Meu objetivo e contribuir para o crescimento da empresa, em
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Meu nome e Matheus, tenho 19 anos , conclui o ensino medio, estou cursando o terceiro periodo do ensino
+                    tecnico na area de TI (tecnico em informatica).Fazendo parte de um projeto que esta iniciando: IF mais Empreendedor. Sou uma pessoa esforcada e aberto a
+                    novos aprendizados. Meu objetivo e contribuir para o crescimento da empresa, ou em
                     qualquer area que eu estiver.</p>
-                    <br><br>
-                   Formacao2023_Curso Tecnico em Informatica (3operiodo)_ Instituto Federal Do Triangulo
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Formacao2023_Curso Tecnico em Informatica (3operiodo)_ Instituto Federal do Triangulo
                     Mineiro com conclusao prevista para dezembro de 2023.
                     2019_2021 Ensino Medio concluido na Escola Nossa Senhora Das Gracas _ Campina
-                    Verde-M.G.
-                    <br><br> 
+                    Verde-M.G. 
                     <h1 style="text-align: left;font-size: 20px;color: white;">Habilidades</h1>
                         <p>Iniciativa.</p>
                         <p>Raciocinio logico.</p>
                         <p>Colaboracao.</p>
                         <p>Iniciacao na linguagem C.</p>
-                        <p>Iniciao na informatica basica: Word, Excel.</p>
-                        <p>Iniciacao em programacao em HTML</p>
-                        <p>Iniciacao em manutencao de computadores e notebooks</p>
+                        <p>Conhecimento informatica basica: Word, Excel.</p>
+                        <p>Conhecimento em programacao em HTML</p>
+                        <p>Conhecimento em manutencao de computadores e notebooks</p>
                         <p>Iniciacao com GIT e GITHUB</p>
-                        <h1 style="text-align: left;font-size: 20px; color: white;">Certificados</h1>
-                        <p><img src="certificado1.jpg" alt="imagem.png"><img src="certificado2.jpg" alt="imagem.png"></p>
-                        <p>Certificado de carga horaria 40 horas de gestao e empreendimento: diagnostico e analise de micro e pequenos negocios </p>
-                        <p>Certificado de carga horaria 10 horas de pilotagem de Drone</p>
                         <h1 style="text-align: left;font-size: 20px;color: white;">Interesses</h1>
-                     <p>Esportes(futebol, corrida, volei).</p>
-                     <p>Jogos de raciocinio.</p>
-                     <p>Marketing virtual.</p>
+                        <p>Esportes(futebol, corrida, volei).</p>
+                        <p>Jogos de raciocinio.</p>
+                        <p>Marketing virtual.</p>
+                        <h1 style="text-align: left;font-size: 20px; color: white;">Certificados</h1>
+                        <p>Certificado de carga horaria 40 horas de gestao e empreendimento: diagnostico e analise de micro e pequenos negocios <br>
+                            Certificado de carga horaria 10 horas de pilotagem de Drone </p>
+                            <p><a href="certificado2.pdf" target="_blank">link certificados</a></p>
             </div>
             <div id="footer">
-                <p> Rodape</p>
+                <p> Rodape</p><p><a href="  https://github.com/matheusjl" target="_blank">link GITHUB</a></p>
+              
                 <p><a href="https://instagram.com/theus_silva6517?igshid=ZGUzMzM3NWJiOQ==" target="_blank">link instagram</a></p>
             </div>
         </div>
