incluindo link git

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                             <p><a href="certificado2.pdf" target="_blank">link certificados</a></p>
             </div>
             <div id="footer">
-                <p> Rodape</p><p><a href="  https://github.com/matheusjl" target="_blank">link GITHUB</a></p>
-              
-                <p><a href="https://instagram.com/theus_silva6517?igshid=ZGUzMzM3NWJiOQ==" target="_blank">link instagram</a></p>
+                <p style="text-align: center; left;font-size: 20px; color: white;">Referencias</p>
+                <p style="text-align: left;"><a href="  https://github.com/matheusjl" target="_blank">link GITHUB 
+                    <a href="https://instagram.com/theus_silva6517?igshid=ZGUzMzM3NWJiOQ==" target="_blank"><p style="text-align: center;"> link instagram</p></a></a></p>
             </div>
         </div>
     </body>
