--- a/index.html
+++ b/index.html
@@ -29,25 +29,26 @@
                     <h1 style="text-align: left;font-size: 20px;color: white;">Habilidades</h1>
                         <p>Iniciativa.</p>
                         <p>Raciocinio logico.</p>
-                        <p>Colaboracao.</p>
+                        <p>Um pouco de conhecimento com metodo kanban.</p>
                         <p>Iniciacao na linguagem C.</p>
                         <p>Conhecimento informatica basica: Word, Excel.</p>
                         <p>Conhecimento em programacao em HTML</p>
                         <p>Conhecimento em manutencao de computadores e notebooks</p>
                         <p>Iniciacao com GIT e GITHUB</p>
                         <h1 style="text-align: left;font-size: 20px;color: white;">Interesses</h1>
-                        <p>Esportes(futebol, corrida, volei).</p>
-                        <p>Jogos de raciocinio.</p>
-                        <p>Marketing virtual.</p>
+                        <p><i class="fa-regular fa-futbol"></i>&nbsp;&nbsp;Esportes(futebol, corrida, volei).</p>
+                        <p><i class="fa-solid fa-puzzle-piece">&nbsp;&nbsp;</i>Jogos de raciocinio.</p>
+                        <p><i class="fa-solid fa-pencil">&nbsp;&nbsp;</i>Marketing virtual.</p>
                         <h1 style="text-align: left;font-size: 20px; color: white;">Certificados</h1>
                         <p>Certificado de carga horaria 40 horas de gestao e empreendimento: diagnostico e analise de micro e pequenos negocios <br>
                             Certificado de carga horaria 10 horas de pilotagem de Drone </p>
                             <p><a href="certificado2.pdf" target="_blank">link certificados</a></p>
             </div>
             <div id="footer">
-                <p style="text-align: center; left;font-size: 20px; color: white;">Referencias</p>
-                <p style="text-align: left;"><a href="  https://github.com/matheusjl" target="_blank">link GITHUB 
-                    <a href="https://instagram.com/theus_silva6517?igshid=ZGUzMzM3NWJiOQ==" target="_blank"><p style="text-align: center;"> link instagram</p></a></a></p>
+                <p style="text-align: left;font-size: 20px; color: white;">informacoes</p>
+                <p style="text-align: left;"><i class="fa-brands fa-github">&nbsp;&nbsp;</i><a href="  https://github.com/matheusjl" target="_blank">link GITHUB</p> 
+                <p style="text-align: left;"><i class="fa-brands fa-instagram">&nbsp;&nbsp;</i><a href="https://instagram.com/theus_silva6517?igshid=ZGUzMzM3NWJiOQ==" target="_blank">link instagram</p>
+                <p><i class="fa-solid fa-computer">&nbsp;&nbsp;</i><a href="manutencao.jpg" target="_blank">link manutencao</a></p>
             </div>
         </div>
     </body>
