--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     tecnico na area de TI (tecnico em informatica).Fazendo parte de um projeto que esta iniciando: IF mais Empreendedor. Sou uma pessoa esforcada e aberto a
                     novos aprendizados. Meu objetivo e contribuir para o crescimento da empresa, ou em
                     qualquer area que eu estiver.</p>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Formacao2023_Curso Tecnico em Informatica (3operiodo)_ Instituto Federal do Triangulo
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Formacao2023_Curso Tecnico em Informatica (3 periodo)_ Instituto Federal do Triangulo
                     Mineiro com conclusao prevista para dezembro de 2023.
                     2019_2021 Ensino Medio concluido na Escola Nossa Senhora Das Gracas _ Campina
                     Verde-M.G. 
