--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Css</title>
+        <title>CURRICULO</title>
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/c708515fe0.js" crossorigin="anonymous"></script>
     </head>
